--- a/templatemo_568_digimedia/homepage_3.html
+++ b/templatemo_568_digimedia/homepage_3.html
@@ -78,7 +78,7 @@ https://templatemo.com/tm-568-digimedia
           <nav class="main-nav">
             <!-- ***** Logo Start ***** -->
             <a href="index.html" class="logo">
-              <img src="assets/images/logo-v3.png" alt="">
+              <!-- <img src="assets/images/Binge_Meee.png" alt=""> -->
             </a>
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
